k8s/overlays/prod/api.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: bitbuyer-api
  namespace: bitbuyer
  labels:
    app: bitbuyer-api
spec:
  selector:
    matchLabels:
      app: bitbuyer-api
  template:
    metadata:
      labels:
        app: bitbuyer-api
    spec:
      containers:
        - name: bitbuyer-api
          image: user632716/bitbuyer:latest
          command: ["gunicorn"]
          args: ["common.wsgi:application", "--bind", "0.0.0.0:8000"]
          ports:
            - containerPort: 8000
          resources:
            requests:
              memory: "64Mi"
              cpu: "250m"
            limits:
              memory: "128Mi"
              cpu: "500m"
