k8s/overlays/prod/ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress
  namespace: bitbuyer
spec:
  rules:
    - host: bitbuyer.tom-preston.co.uk
      http:
        paths:
          - backend:
              service:
                name: front-internal
                port:
                  number: 8080
            path: /
            pathType: Prefix
